--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
-version: "3"
+version: "3.8"
+
 services:
   vaultwarden:
     image: vaultwarden/server:latest
     container_name: vaultwarden
     restart: unless-stopped
     ports:
-     - 50080:80 #map any custom port to use (replace 50080 not 80)
+      - 127.0.0.1:50080:80 # Liaison à localhost pour plus de sécurité
     volumes:
-     - ./bitwarden:/data:rw
+      - ./bitwarden:/data:rw
     environment:
-     - ADMIN_TOKEN=${ADMIN_TOKEN}
-     - WEBSOCKET_ENABLED=true
-     - SIGNUPS_ALLOWED=false
-     - SMTP_HOST=${SMTP_HOST}
-     - SMTP_FROM=${SMTP_FROM}
-     - SMTP_PORT=${SMTP_PORT}
-     - SMTP_SSL=${SMTP_SSL}
-     - SMTP_USERNAME=${SMTP_USERNAME}
-     - SMTP_PASSWORD=${SMTP_PASSWORD}
-     - DOMAIN=${DOMAIN}
+      - ADMIN_TOKEN=${ADMIN_TOKEN}
+      - WEBSOCKET_ENABLED=true
+      - SIGNUPS_ALLOWED=false
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_FROM=${SMTP_FROM}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_SSL=${SMTP_SSL}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - DOMAIN=${DOMAIN}
+    networks:
+      - vaultwarden-network
+
   caddy:
     image: caddy:2
     container_name: caddy
@@ -32,3 +36,9 @@ services:
       - ./caddy-data:/data
     depends_on:
       - vaultwarden
+    networks:
+      - vaultwarden-network
+
+networks:
+  vaultwarden-network:
+    driver: bridge
